--- a/assets/src/sass/components/_main.scss
+++ b/assets/src/sass/components/_main.scss
@@ -19,13 +19,75 @@
   @include mq(desktop) {
     width: calc(60% - 12%);
     padding: rem(48px) 0;
-    position: absolute;
-    left: 70%;
-    transform: translateX(-50%);
+    margin-right: auto;
+    margin-left: 9%;
 
     &.is-centered {
-      left: 50%;
-      transform: translateX(-50%);
+      margin-left: 9%;
+    }
+  }
+
+  @media screen and (min-width: 1600px) {
+    margin-left: 11%;
+
+    &.is-centered {
+      margin-left: 11%;
+    }
+  }
+
+  @media screen and (min-width: 1920px) {
+    margin-left: 13%;
+
+    &.is-centered {
+      margin-left: 13%;
+    }
+  }
+
+  @media screen and (min-width: 1600px) {
+    margin-left: 13%;
+
+    &.is-centered {
+      margin-left: 13%;
+    }
+  }
+
+  @media screen and (min-width: 2300px) {
+    margin-left: 15%;
+
+    &.is-centered {
+      margin-left: 15%;
+    }
+  }
+
+  @media screen and (min-width: 2560px) {
+    margin-left: 17%;
+
+    &.is-centered {
+      margin-left: 17%;
+    }
+  }
+
+  @media screen and (min-width: 2880px) {
+    margin-left: 18%;
+
+    &.is-centered {
+      margin-left: 18%;
+    }
+  }
+
+  @media screen and (min-width: 3840px) {
+    margin-left: 20%;
+
+    &.is-centered {
+      margin-left: 20%;
+    }
+  }
+
+  @media screen and (min-width: 5120px) {
+    margin-left: 22%;
+
+    &.is-centered {
+      margin-left: 22%;
     }
   }
 
